tests/ui/parser/issues/issue-32446.rs
fn main() {}

// This used to end up in an infite loop trying to bump past EOF.
trait T { ... } //~ ERROR
